feat(agent): align campus MVP with design docs